@startuml

title __MODEL's Class Diagram__\n

  package model {
    enum Cash {
      FIVE
      TEN
      TWENTY
      FIFTY
      numVal
    }
  }
  

  package model {
    class Message {
        - text : String
        + Message()
        + getUser()
        + getText()
    }
  }
  

  package model {
    class Request {
        - accountType : String
        - msg : String
        + Request()
        + getUser()
        + getAccountType()
        + getMsg()
    }
  }
  

  Message o-- User : user
  Request o-- User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
